--- a/Description
+++ b/Description
@@ -1,2 +1,2 @@
 This is an Portfolio website which I designed for an internship assignment.
-It is a simp front-end website based majorly on HTML and CSS.
+It is a simple front-end website based majorly on HTML and CSS.
